--- a/common/lib/xmodule/xmodule/css/sequence/display.scss
+++ b/common/lib/xmodule/xmodule/css/sequence/display.scss
@@ -30,6 +30,23 @@ $sequence--border-color: #C8C8C8;
   }
 }
 
+%ui-clear-button  {
+  background-color: rgba(0,0,0,0);
+  background-image: none;
+  background-position: center 14px;
+  background-repeat: no-repeat;
+  border: none;
+  border-radius: 0;
+
+  background-clip: border-box;
+  box-shadow: none;
+  box-sizing: content-box;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+}
+
+
 // ====================
 
 .sequence-nav {
@@ -90,7 +107,7 @@ $sequence--border-color: #C8C8C8;
     padding: 0 ($baseline/2);
     width: 100%;
 
-    a {
+    button {
       @extend .block-link;
     }
 
@@ -98,15 +115,14 @@ $sequence--border-color: #C8C8C8;
       display: table-cell;
       min-width: 20px;
 
-      a {
+      button {
         @extend %ui-fake-link;
+        @extend %ui-clear-button;
         @include transition(none);
         width: 100%;
         height: 42px;
         margin: 0;
-        background-position: center 14px;
-        background-repeat: no-repeat;
-        border: 1px solid transparent;
+
         display: block;
         padding: 0;
         position: relative;
@@ -189,6 +205,7 @@ $sequence--border-color: #C8C8C8;
 
         p {
           @extend %ui-depth2;
+          margin-top: ($baseline/5);
           background: #333;
           color: $white;
           font-family: $sans-serif;
@@ -199,7 +216,7 @@ $sequence--border-color: #C8C8C8;
           position: absolute;
           top: 48px;
           text-shadow: 0 -1px 0 $black;
-          @include transition(all .1s $ease-in-out-quart 0s);
+          @include text-align(left);
           white-space: pre;
           visibility: hidden;
           pointer-events: none;
@@ -224,20 +241,11 @@ $sequence--border-color: #C8C8C8;
             width: 10px;
           }
         }
-
-        &:hover, &:focus {
-          p {
-            display: block;
-            margin-top: ($baseline/5);
-            opacity: 1.0;
-            visibility: visible;
-          }
-        }
       }
     }
   }
 
-  body.touch-based-device & ol li a:hover p {
+  body.touch-based-device & ol li button:hover p {
     display: none;
   }
 }
