--- a/lms/templates/seq_module.html
+++ b/lms/templates/seq_module.html
@@ -14,17 +14,16 @@
         ## implementation note: will need to figure out how to handle combining detail
         ## statuses of multiple modules in js.
         <li>
-        <a class="seq_${item['type']} inactive progress-${item['progress_status']}"
+        <button class="seq_${item['type']} inactive progress-${item['progress_status']} nav-item"
            data-id="${item['id']}"
            data-element="${idx+1}"
-           href="javascript:void(0);"
            data-page-title="${item['page_title']|h}"
-           aria-controls="seq_contents_${idx}"
-           id="tab_${idx}"
-           tabindex="0">
+           data-path="${item['path']|h}"
+           id="tab_${idx}">
             <i class="icon fa seq_${item['type']}" aria-hidden="true"></i>
-            <p><span class="sr">${item['type']}</span>${item['title']}</p>
-          </a>
+            <i class="fa fa-fw fa-bookmark bookmark-icon ${"is-hidden" if not item['bookmarked'] else "bookmarked"}" aria-hidden="true"></i>
+            <div class="sequence-tooltip sr"><span class="sr">${item['type']}&nbsp;</span>${item['title']}<span class="sr bookmark-icon-sr">&nbsp;${_("Bookmarked") if item['bookmarked'] else ""}</span></div>
+          </button>
         </li>
         % endfor
       </ol>
